fix duckdb test